# OOP_POLYTECH_PHONEBOOK

./: CMakeLists.txt  PhoneBookQt.pro  README.md  architechture.txt  contacts.json  phonebook
include/: Contact.h  FileRepository.h  PhoneNumber.h  Qt.h  UI.h
source/: Contact.cpp  ContactManager.cpp  FileRepository.cpp  PhoneNumber.cpp  Qt.cpp  Qt_main.cpp  UI.cpp  Validators.cpp  main.cpp
